--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "node-2-guided",
   "version": "1.0.0",
   "scripts": {
-    "server": "nodemon",
+    "server": "nodemon index.js",
     "start": "node index.js",
     "migrate": "knex migrate:latest",
     "rollback": "knex migrate:rollback",
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "knex": "^0.95.11",
     "knex-cleaner": "^1.3.1",
     "sqlite3": "^5.0.2"
